--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div class="side_rect">
 			<img src="images/rami.png" class="portrait">
 			<p class="sidebar_text">"Sometimes the best way to fix something is to have someone else break
-				it." <br><br> -Ramie Ghassan Shreim</p>
+				it." <br><br> -Ramie Ghassan Shreimmmmmmmm</p>
 		</div>
 
 		<!---Bio-->
