some sidebar changes
consider doing this to your homepage too.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<link href="css.css" type="text/css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Chelsea+Market&display=swap" rel="stylesheet">
-	<title> About Me </title>
+	<title> Case Study </title>
 
 </head>
 
@@ -20,9 +20,11 @@
 		<!---Sidebar-->
 
 		<div class="side_rect">
-			<img src="images/rami.png" class="portrait">
-			<p class="sidebar_text">"Sometimes the best way to fix something is to have someone else break
-				it." <br><br> -Ramie Ghassan Shreimmmmmmmm</p>
+			<div class="sidebar_text">
+			<h1>Contents</h1>
+			<h3>Our Goal</h3>
+			<h3>Heuristic Analysis</h3>
+			</div>
 		</div>
 
 		<!---Bio-->
