Working Contents Section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <body>
 
 
-
 	<div class="bg_square">
 
 
@@ -21,13 +20,18 @@
 
 		<div class="side_rect">
 			<div class="sidebar_text">
-			<h1>Contents</h1>
-			<h3>Our Goal</h3>
-			<h3>Heuristic Analysis</h3>
+				<h1>Contents</h1>
+				<h3><a href="#our_goal">Our Goal</a></h3>
+				<h3><a href="#heuristic_analysis">Heuristic Analysis</a></h3>
+				<h3><a href="#ux_research">UX Research</a></h3>
+				<h3><a href="#lofi_mockups">Low Fidelity Mockups</a></h3>
+				<h3><a href="#hifi_mockups">High Fidelity Mockups</a></h3>
+				<h3><a href="#try_it">Try It Yourself!</a></h3>
+
 			</div>
 		</div>
 
-		<!---Bio-->
+		<!---Case Study Contents-->
 
 		<div class="bio_footer_container">
 
@@ -35,52 +39,112 @@
 
 				<section class="bio_text">
 
-					<h1>Ramie Shreim</h1>
+					<h1>UX Case Study: Wild Life Conservation Society</h1>
 
-					<h2>About Me</h2>
+					<a name="our_goal">
 
-					<p> Hello! My name is Ramie and I'm a recent graduate from UCI's Claire Trevor School of the
-						Arts. Ever since I was a child I loved to make things. Art, Games, you name it. If it
-						exists, I've probably at least tried it. So it's only natural that I'd study art,
-						however I found that studying art at UCI wasn't enough for me so I decided to continue my
-						education and study UX design. My dream is to work with talented and creative people
-						wherever that may be, and work together to make awesome things. I believe that through my
-						experience working on various teams, at school and elsewhere, I've become a reliable teammate
-						that can wear many hats and communicate effectively to deliver a good final product. And if
-						there is something I don't understand, I do not hesitate to ask questions and I always adapt
-						and learn. I've been called a "jack of all trades" a few times before, and I find that in UX
-						design this is a very good quality to have. UX designers Do many things and communicate
-						with people of all kinds of roles. </p>
+						<h2>Our Goal</h2>
 
-					<h2>UX/UI Work</h2>
+						<p> Hello! My name is Ramie and I'm a recent graduate from UCI's Claire Trevor School of the
+							Arts. Ever since I was a child I loved to make things. Art, Games, you name it. If it
+							exists, I've probably at least tried it. So it's only natural that I'd study art,
+							however I found that studying art at UCI wasn't enough for me so I decided to continue my
+							education and study UX design. My dream is to work with talented and creative people
+							wherever that may be, and work together to make awesome things. I believe that through my
+							experience working on various teams, at school and elsewhere, I've become a reliable
+							teammate
+							that can wear many hats and communicate effectively to deliver a good final product. And if
+							there is something I don't understand, I do not hesitate to ask questions and I always adapt
+							and learn. I've been called a "jack of all trades" a few times before, and I find that in UX
+							design this is a very good quality to have. UX designers Do many things and communicate
+							with people of all kinds of roles. </p>
 
-					<p> During my time at the UX/UI bootcamp, I learned everything I need to know about designing a
-						responsive UI from start to finish. From basic UX priciples, to user research, to prototyping and testing, and prototyping and testing again. I've learned it all and I'm ready
-						to start digging in and making great stuff. Of course, I've already got some neat designs under my belt! Key examples being this website,
-						and <a href="https://projects.invisionapp.com/share/3GU4I5IH8D7#/screens/386041006">THIS</a>
-						which is a mobile redesign of the Wildlife Conservation Societies website. </p>
-
-					<h2>As An Artist</h2>
-
-					<p> As stated before, for as long as I can remember I've always liked to make things. Throughout my life I've struggled on and off
-						to make better drawings, and in more recent years, make better games. Currently in my off time I'm doing figure-drawing studies and I'm working on my first ever Steam-released game titled "Axe Girl" 
-						<a href="https://www.youtube.com/watch?v=Wm2yGIBNqks"> (early footage)</a>
-						 I think my most "developed" art skill is drawing. But I have knowledge and skills on all kinds of art including: animation, painting, sculpture, 3D modeling, and now, web design!
-						Though it is now my dream to work as a UX designer on an awesome team, my secondary goal is to be an art teacher for children part time. I think art education is important, and from my experience 
-						I don't think there is enough of it, and often times programs that are designed to teach art can fail in certain areas. So I want to be a good example and hopefully the kids I teach will be better than me.  
-					</p>
+					</a>
 
 
+					<a name="heuristic_analysis">
 
-					<h2>Fun Facts</h2>
-					<p> I was born on Pi day (march 14th) Despite this, I am still not very good at math. <br> <br>
-						I was in the Video Game Development Club at UCI. <a
-							href="https://www.youtube.com/watch?time_continue=25&v=daIp9TnY2yk">Check this
-							out!</a> <br><br>
-						I was an officer of the animation club and helped create student films. <a
-							href="https://www.youtube.com/watch?v=pyLcI3ti4Sw&t=2s">Watch this!</a>
-						<br> <br>
-						
+						<h2>Heuristic Analysis</h2>
+
+						<p> During my time at the UX/UI bootcamp, I learned everything I need to know about designing a
+							responsive UI from start to finish. From basic UX priciples, to user research, to
+							prototyping
+							and testing, and prototyping and testing again. I've learned it all and I'm ready
+							to start digging in and making great stuff. Of course, I've already got some neat designs
+							under
+							my belt! Key examples being this website,
+							and <a href="https://projects.invisionapp.com/share/3GU4I5IH8D7#/screens/386041006">THIS</a>
+							which is a mobile redesign of the Wildlife Conservation Societies website. </p>
+
+					</a>
+
+					<a name="ux_research">
+
+						<h2>UX Research</h2>
+
+						<p> As stated before, for as long as I can remember I've always liked to make things. Throughout
+							my
+							life I've struggled on and off
+							to make better drawings, and in more recent years, make better games. Currently in my off
+							time
+							I'm doing figure-drawing studies and I'm working on my first ever Steam-released game titled
+							"Axe Girl"
+							<a href="https://www.youtube.com/watch?v=Wm2yGIBNqks"> (early footage)</a>
+							I think my most "developed" art skill is drawing. But I have knowledge and skills on all
+							kinds
+							of art including: animation, painting, sculpture, 3D modeling, and now, web design!
+							Though it is now my dream to work as a UX designer on an awesome team, my secondary goal is
+							to
+							be an art teacher for children part time. I think art education is important, and from my
+							experience
+							I don't think there is enough of it, and often times programs that are designed to teach art
+							can
+							fail in certain areas. So I want to be a good example and hopefully the kids I teach will be
+							better than me.
+						</p>
+
+					</a>
+
+
+					<a name="lofi_mockups">
+
+						<h2>Low Fidelity Mockups</h2>
+						<p> I was born on Pi day (march 14th) Despite this, I am still not very good at math. <br> <br>
+							I was in the Video Game Development Club at UCI. <a
+								href="https://www.youtube.com/watch?time_continue=25&v=daIp9TnY2yk">Check this
+								out!</a> <br><br>
+							I was an officer of the animation club and helped create student films. <a
+								href="https://www.youtube.com/watch?v=pyLcI3ti4Sw&t=2s">Watch this!</a>
+							<br> <br>
+
+					</a>
+
+					<a name="hifi_mockups">
+
+						<h2>High Fidelity Mockups</h2>
+						<p> I was born on Pi day (march 14th) Despite this, I am still not very good at math. <br> <br>
+							I was in the Video Game Development Club at UCI. <a
+								href="https://www.youtube.com/watch?time_continue=25&v=daIp9TnY2yk">Check this
+								out!</a> <br><br>
+							I was an officer of the animation club and helped create student films. <a
+								href="https://www.youtube.com/watch?v=pyLcI3ti4Sw&t=2s">Watch this!</a>
+							<br> <br>
+
+					</a>
+
+					<a name="try_it">
+
+						<h2>Try It Yourself</h2>
+						<p> I was born on Pi day (march 14th) Despite this, I am still not very good at math. <br> <br>
+							I was in the Video Game Development Club at UCI. <a
+								href="https://www.youtube.com/watch?time_continue=25&v=daIp9TnY2yk">Check this
+								out!</a> <br><br>
+							I was an officer of the animation club and helped create student films. <a
+								href="https://www.youtube.com/watch?v=pyLcI3ti4Sw&t=2s">Watch this!</a>
+							<br> <br>
+
+					</a>
+
 
 				</section>
 
@@ -121,5 +185,3 @@
 </body>
 
 </html>
-
-
