--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
 	<!--To top button-->
-			
+
 	<a href="#the_top"><img class="top_btn" src="images/to-top.png"></a>
 
 
@@ -22,22 +22,22 @@
 
 		<!---Sidebar-->
 
-			<div class="side_rect">
-				<div class="sidebar_text">
-					<h1>Contents</h1>
-					<h3><a href="#our_goal">Our Goal</a></h3>
-					<h3><a href="#heuristic_analysis">Heuristic Analysis</a></h3>
-					<h3><a href="#ux_research">UX Research</a></h3>
-					<h3><a href="#lofi_mockups">Low Fidelity Mockups</a></h3>
-					<h3><a href="#hifi_mockups">High Fidelity Mockups</a></h3>
-					<h3><a href="#try_it">Try It Yourself!</a></h3>
-
-				</div>
-
+		<div class="side_rect">
+			<div class="sidebar_text">
+				<h1>Contents</h1>
+				<h3><a href="#our_goal">Our Goal</a></h3>
+				<h3><a href="#heuristic_analysis">Heuristic Analysis</a></h3>
+				<h3><a href="#ux_research">UX Research</a></h3>
+				<h3><a href="#lofi_mockups">Low Fidelity Mockups</a></h3>
+				<h3><a href="#hifi_mockups">High Fidelity Mockups</a></h3>
+				<h3><a href="#try_it">Try It Yourself</a></h3>
 
 			</div>
 
-			
+
+		</div>
+
+
 
 
 
@@ -45,14 +45,14 @@
 
 		<div class="bio_footer_container">
 
-			<a name="the_top">
-				<div class="bio_rect">
+			<div class="bio_rect">
 
+				<a name="the_top">
+
+					<!---Header/Our Goal-->
 					<section class="bio_text">
 
-
-						<h1>UX Case Study: Wild Life Conservation Society</h1>
-
+						<h1>UX Case Study: WCS</h1>
 
 						<a name="our_goal"></a>
 
@@ -71,123 +71,129 @@
 							and learn. I've been called a "jack of all trades" a few times before, and I find that in UX
 							design this is a very good quality to have. UX designers Do many things and communicate
 							with people of all kinds of roles. </p>
+					</section>
+
+				</a>
+
+
+
+				<!--Heuristic Analysis-->
+				<section class="bio_text">
+					<a name="heuristic_analysis">
+
+						<h2>Heuristic Analysis</h2>
+
+						<p> During my time at the UX/UI bootcamp, I learned everything I need to know about designing a
+							responsive UI from start to finish. From basic UX priciples, to user research, to
+							prototyping
+							and testing, and prototyping and testing again. I've learned it all and I'm ready
+							to start digging in and making great stuff. Of course, I've already got some neat designs
+							under
+							my belt! Key examples being this website,
+							and <a href="https://projects.invisionapp.com/share/3GU4I5IH8D7#/screens/386041006">THIS</a>
+							which is a mobile redesign of the Wildlife Conservation Societies website. </p>
+
+					</a>
+
+				</section>
+
+				<!---UX Research-->
+				<section class="bio_text">
+					<a name="ux_research">
+
+						<h2>UX Research</h2>
+
+						<p> research copy goes here
+						</p>
+
+
+
+					</a>
+				</section>
+
+				<!---User Persona-->
+				<img id="study_img" src="images/persona.png">
+
+				<!--Lofi Mockups-->
+				<section class="bio_text">
+					<a name="lofi_mockups">
+
+						<h2>Low Fidelity Mockups</h2>
+						<p> I was born on Pi day (march 14th) Despite this, I am still not very good at math. <br> <br>
+							I was in the Video Game Development Club at UCI. <a
+								href="https://www.youtube.com/watch?time_continue=25&v=daIp9TnY2yk">Check this
+								out!</a> <br><br>
+							I was an officer of the animation club and helped create student films. <a
+								href="https://www.youtube.com/watch?v=pyLcI3ti4Sw&t=2s">Watch this!</a>
+							<br> <br>
+
+					</a>
+				</section>
+
+				<!---wireflow-->
+				<img id="study_img" src="images/wireflow.png">
+
+				<!--Hifi Mockups-->
+				<section class="bio_text">
+					<a name="hifi_mockups">
+
+						<h2>High Fidelity Mockups</h2>
+						<p> I was born on Pi day (march 14th) Despite this, I am still not very good at math. <br> <br>
+							I was in the Video Game Development Club at UCI. <a
+								href="https://www.youtube.com/watch?time_continue=25&v=daIp9TnY2yk">Check this
+								out!</a> <br><br>
+							I was an officer of the animation club and helped create student films. <a
+								href="https://www.youtube.com/watch?v=pyLcI3ti4Sw&t=2s">Watch this!</a>
+							<br> <br>
+
+					</a>
+
+				</section>
+
+				<!--Try it yourself-->
+				<section class="bio_text">
+					<a name="try_it">
+
+						<h2>Try It Yourself</h2>
+						<p> <a href="https://projects.invisionapp.com/share/SHU4EZ2WA4D#/screens" target="blank"> Desktop Prototype
+							</a> <br> <br>
+							<a
+								href="https://projects.invisionapp.com/share/3GU4I5IH8D7#/screens/386041006_Android_Mobile_Version" target="blank">
+								Mobile Prototype </a>
+						</p>
+					</a>
+				</section>
+
+
+
+
+			</div>
 
 			</a>
 
 
-			<a name="heuristic_analysis">
+			<!--footer-->
 
-				<h2>Heuristic Analysis</h2>
+			<div class="footer_rect">
 
-				<p> During my time at the UX/UI bootcamp, I learned everything I need to know about designing a
-					responsive UI from start to finish. From basic UX priciples, to user research, to
-					prototyping
-					and testing, and prototyping and testing again. I've learned it all and I'm ready
-					to start digging in and making great stuff. Of course, I've already got some neat designs
-					under
-					my belt! Key examples being this website,
-					and <a href="https://projects.invisionapp.com/share/3GU4I5IH8D7#/screens/386041006">THIS</a>
-					which is a mobile redesign of the Wildlife Conservation Societies website. </p>
+				<section class="footer_text">
 
-			</a>
-
-			<a name="ux_research">
-
-				<h2>UX Research</h2>
-
-				<p> As stated before, for as long as I can remember I've always liked to make things. Throughout
-					my
-					life I've struggled on and off
-					to make better drawings, and in more recent years, make better games. Currently in my off
-					time
-					I'm doing figure-drawing studies and I'm working on my first ever Steam-released game titled
-					"Axe Girl"
-					<a href="https://www.youtube.com/watch?v=Wm2yGIBNqks"> (early footage)</a>
-					I think my most "developed" art skill is drawing. But I have knowledge and skills on all
-					kinds
-					of art including: animation, painting, sculpture, 3D modeling, and now, web design!
-					Though it is now my dream to work as a UX designer on an awesome team, my secondary goal is
-					to
-					be an art teacher for children part time. I think art education is important, and from my
-					experience
-					I don't think there is enough of it, and often times programs that are designed to teach art
-					can
-					fail in certain areas. So I want to be a good example and hopefully the kids I teach will be
-					better than me.
-				</p>
-
-			</a>
+					<h1>Get In Touch </h1>
+					<p>
+						Email: rami.gshreim@gmail.com | Phone: (949)-732-8483 |
 
 
-			<a name="lofi_mockups">
+						<a href="https://www.linkedin.com/in/ramie-shreim-b8b024188/"><img src="images/linkedin.png"
+								class="social_icon"></a>
+						<a href="https://www.artstation.com/greenrami"><img src="images/Artstation.png"
+								class="social_icon"></a>
+					</p>
 
-				<h2>Low Fidelity Mockups</h2>
-				<p> I was born on Pi day (march 14th) Despite this, I am still not very good at math. <br> <br>
-					I was in the Video Game Development Club at UCI. <a
-						href="https://www.youtube.com/watch?time_continue=25&v=daIp9TnY2yk">Check this
-						out!</a> <br><br>
-					I was an officer of the animation club and helped create student films. <a
-						href="https://www.youtube.com/watch?v=pyLcI3ti4Sw&t=2s">Watch this!</a>
-					<br> <br>
+				</section>
 
-			</a>
-
-			<a name="hifi_mockups">
-
-				<h2>High Fidelity Mockups</h2>
-				<p> I was born on Pi day (march 14th) Despite this, I am still not very good at math. <br> <br>
-					I was in the Video Game Development Club at UCI. <a
-						href="https://www.youtube.com/watch?time_continue=25&v=daIp9TnY2yk">Check this
-						out!</a> <br><br>
-					I was an officer of the animation club and helped create student films. <a
-						href="https://www.youtube.com/watch?v=pyLcI3ti4Sw&t=2s">Watch this!</a>
-					<br> <br>
-
-			</a>
-
-			<a name="try_it">
-
-				<h2>Try It Yourself</h2>
-				<p> I was born on Pi day (march 14th) Despite this, I am still not very good at math. <br> <br>
-					I was in the Video Game Development Club at UCI. <a
-						href="https://www.youtube.com/watch?time_continue=25&v=daIp9TnY2yk">Check this
-						out!</a> <br><br>
-					I was an officer of the animation club and helped create student films. <a
-						href="https://www.youtube.com/watch?v=pyLcI3ti4Sw&t=2s">Watch this!</a>
-					<br> <br>
-
-			</a>
-
-
-			</section>
+			</div>
 
 		</div>
-
-		</a>
-
-
-		<!--footer-->
-
-		<div class="footer_rect">
-
-			<section class="footer_text">
-
-				<h1>Get In Touch </h1>
-				<p>
-					Email: rami.gshreim@gmail.com | Phone: (949)-732-8483 |
-
-
-					<a href="https://www.linkedin.com/in/ramie-shreim-b8b024188/"><img src="images/linkedin.png"
-							class="social_icon"></a>
-					<a href="https://www.artstation.com/greenrami"><img src="images/Artstation.png"
-							class="social_icon"></a>
-				</p>
-
-			</section>
-
-		</div>
-
-	</div>
 
 
 
