lots of changes

--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
 
 						<h2>Our Goal</h2>
 
-						<p> </p>
+						<p>The WCS, or "Wildlife Conservation Society" is a non-profit organization dedicated to the protection of wildlife. They are a global organization, operating in over 65 countries.
+							They also own many zoos and an aquarium. As succesful as they are, surprisingly enough, their website leaves a lot to be desired. So as a team, Justin Blake, Theresa Hoang, and I created
+							a prototype for what an improved WCS website could look like. Unfortunately, the WCS themselves weren't keen on the idea of giving us any useful information to start with. But through careful
+							research and a lot of testing, we were able to create a mockup that improves upon the WCS' current design. </p>
 					</section>
 
 				</a>
@@ -71,19 +74,39 @@
 
 						<h2>Heuristic Analysis</h2>
 
-						<p> During my time at the UX/UI bootcamp, I learned everything I need to know about designing a
-							responsive UI from start to finish. From basic UX priciples, to user research, to
-							prototyping
-							and testing, and prototyping and testing again. I've learned it all and I'm ready
-							to start digging in and making great stuff. Of course, I've already got some neat designs
-							under
-							my belt! Key examples being this website,
-							and <a href="https://projects.invisionapp.com/share/3GU4I5IH8D7#/screens/386041006">THIS</a>
-							which is a mobile redesign of the Wildlife Conservation Societies website. </p>
+						<p> Looking at their current site, its plain to see that there is room for improvement. Why does it have this big fat side navigation? Why not have it on the top like most other websites?
+							The way images are stitched together here doesn't really look nice on desktop, and there are three big competing headlines screaming right at you from the start. None of which really inform 
+							you what the WCS is about other then the fact that they have something to do with animals.  </p>
 
 					</a>
 
 				</section>
+
+				<!---First Old Wcs Image-->
+				<img id="study_img" src="images/wcsold.png">
+
+				<section class="bio_text">
+	
+							<p> <br> <br> <br> On some parts of the website, they even have a side navigation and a top navigation. 
+								Why is that? Why not have the global nav and the primary nav stacked on top of each other? framing the content of the page like this just seems sort of odd. </p>
+
+					</section>
+
+					<!---Second Old Wcs Image-->
+				<img id="study_img" src="images/wcsold2.png">
+
+				<section class="bio_text">
+	
+						<p> <br> <br> <br> Their donation page doesn't seem too bad. But the footer is always peeking up from the bottom a little bit for some reason. No matter where you are on the page the very top of the footer
+						follows you, and this is just awful. The footer is of no use if you can't see the whole thing, and it just gets in the way. On the bright side, we loved the way their donation process actually worked. The buttons 
+					are simple, eye catching, and informative. Making a donation is relatively painless and this page actually looks pretty good on mobile. But on desktop it definely needs a rework.  </p>
+
+				</section>
+
+				<!---3rd Old Wcs Image-->
+				<img id="study_img" src="images/wcsold_donation.png">
+
+
 
 				<!---UX Research-->
 				<section class="bio_text">
@@ -91,13 +114,19 @@
 
 						<h2>UX Research</h2>
 
-						<p> research copy goes here
-						</p>
+						<p> With nothing to go off of from the WCS themselves, we began our research from scratch. Conducting interviews, gathering survey data, and testing the current website with various users.
+							We then synthesized that data into an affinity diagram, created a user persona, and a storyboard. We found through our research that many people are interested in wildlife conservation.
+							However, a lot of them, especially younger people, would rather volunteer or sign petitions than donate. As far as UI is concerned, many of our testers had the same issues with the website that we did and
+							almost all of them complained about the navigation. 
+							</p>
 
 
 
 					</a>
 				</section>
+
+				<!---Survey Data-->
+				<img id="study_img" src="images/survey_data.png">
 
 				<!---User Persona-->
 				<img id="study_img" src="images/persona.png">
