--- a/index.html
+++ b/index.html
@@ -131,41 +131,70 @@
 				<!---User Persona-->
 				<img id="study_img" src="images/persona.png">
 
+
+
 				<!--Lofi Mockups-->
 				<section class="bio_text">
 					<a name="lofi_mockups">
 
 						<h2>Low Fidelity Mockups</h2>
-						<p> I was born on Pi day (march 14th) Despite this, I am still not very good at math. <br> <br>
-							I was in the Video Game Development Club at UCI. <a
-								href="https://www.youtube.com/watch?time_continue=25&v=daIp9TnY2yk">Check this
-								out!</a> <br><br>
-							I was an officer of the animation club and helped create student films. <a
-								href="https://www.youtube.com/watch?v=pyLcI3ti4Sw&t=2s">Watch this!</a>
-							<br> <br>
+						<p> We decided that the goal of our prototype should be to entice people to contribute in any way they can. Not only with donations, but also through inexspensive means such as volunteering
+							and signing petitions. Primarily, we wanted to make this quick, easy, and in a way that doesn't take you away from browsing the rest of the website. <br> <br>
 
+							The user flow pictured below demonstrates our intended interaction with the website. Ideally, at any point during someones visit they should be able to do something productive.
+							 </p>
 					</a>
 				</section>
 
 				<!---wireflow-->
 				<img id="study_img" src="images/wireflow.png">
 
+
+				<section class="bio_text">
+	
+						<p> <br> <br>  From what we saw on the website previously, the donation process is actually fairly short. So we decided we wanted to scrap the donation page in favor of a modal.
+						The idea being that getting through the process on a modal with a couple of quick forms would flow well with the experience of browsing articles. This also let you get right back to what you were doing when you're 
+						done donating. This is good not only because its pleasant, but the longer you stick around the more likely you are to do something else. Like signing a petition or signing up to volunteer. In the images below you
+						can see a quick paper sketch and a low fidelity mockup of the modal. You can also see that we scrapped the sidebar on desktop.   </p>
+
+				</section>
+
+				<!---Sketch-->
+				<img id="study_img" src="images/paper_prototype.png">
+
+
+				<!---Lofi Modal-->
+				<img id="study_img" src="images/lofi_modal.png">
+				
+				<section class="bio_text">
+	
+						<p> <br> We actually wanted to put volunteering and petition signing on modals too. But it became very apparent that each of those causes warranted its own page,
+						so we opted for just having a clearer call to action on each of them instead. </p>
+
+				</section>
+
 				<!--Hifi Mockups-->
 				<section class="bio_text">
 					<a name="hifi_mockups">
 
 						<h2>High Fidelity Mockups</h2>
-						<p> I was born on Pi day (march 14th) Despite this, I am still not very good at math. <br> <br>
-							I was in the Video Game Development Club at UCI. <a
-								href="https://www.youtube.com/watch?time_continue=25&v=daIp9TnY2yk">Check this
-								out!</a> <br><br>
-							I was an officer of the animation club and helped create student films. <a
-								href="https://www.youtube.com/watch?v=pyLcI3ti4Sw&t=2s">Watch this!</a>
-							<br> <br>
-
+						<p> After extensive testing on the previous protoype, we created high fidelity prototypes for both mobile and desktop versions of the website. <br> <br>
+							This is the homepage on desktop:  </p>
 					</a>
 
 				</section>
+
+				<!---Desktop homepage-->
+				<img id="study_img" src="images/hifi_desktop1.png">
+
+				<section class="bio_text">
+	
+						<p> <br> And here is an image of it on mobile: </p>
+
+				</section>
+
+				<!---Mobile Homepage-->
+				<img id="study_img" src="images/mobile_hifi.png">
 
 				<!--Try it yourself-->
 				<section class="bio_text">
