Fixed the image bug!

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				</section>
 
 				<!---First Old Wcs Image-->
-				<img id="study_img" src="images/wcsold.png">
+				<img class="study_img_container" id="study_img" src="images/wcsold.png">
 
 				<section class="bio_text">
 	
@@ -93,7 +93,7 @@
 					</section>
 
 					<!---Second Old Wcs Image-->
-				<img id="study_img" src="images/wcsold2.png">
+				<img class="study_img_container" id="study_img" src="images/wcsold2.png">
 
 				<section class="bio_text">
 	
@@ -104,7 +104,7 @@
 				</section>
 
 				<!---3rd Old Wcs Image-->
-				<img id="study_img" src="images/wcsold_donation.png">
+				<img class="study_img_container" id="study_img" src="images/wcsold_donation.png">
 
 
 
@@ -126,10 +126,10 @@
 				</section>
 
 				<!---Survey Data-->
-				<img id="study_img" src="images/survey_data.png">
+				<img class="study_img_container" id="study_img" src="images/survey_data.png">
 
 				<!---User Persona-->
-				<img id="study_img" src="images/persona.png">
+				<img class="study_img_container" id="study_img" src="images/persona.png">
 
 
 
@@ -147,7 +147,7 @@
 				</section>
 
 				<!---wireflow-->
-				<img id="study_img" src="images/wireflow.png">
+				<img class="study_img_container" class="study_img_container" id="study_img" src="images/wireflow.png">
 
 
 				<section class="bio_text">
@@ -160,11 +160,11 @@
 				</section>
 
 				<!---Sketch-->
-				<img id="study_img" src="images/paper_prototype.png">
+				<img class="study_img_container" id="study_img" src="images/paper_prototype.png">
 
 
 				<!---Lofi Modal-->
-				<img id="study_img" src="images/lofi_modal.png">
+				<img class="study_img_container" id="study_img" src="images/lofi_modal.png">
 				
 				<section class="bio_text">
 	
@@ -185,7 +185,7 @@
 				</section>
 
 				<!---Desktop homepage-->
-				<img id="study_img" src="images/hifi_desktop1.png">
+				<img class="study_img_container" id="study_img" src="images/hifi_desktop1.png">
 
 				<section class="bio_text">
 	
@@ -194,7 +194,7 @@
 				</section>
 
 				<!---Mobile Homepage-->
-				<img id="study_img" src="images/mobile_hifi.png">
+				<img class="study_img_container" id="study_img" src="images/mobile_hifi.png">
 
 				<!--Try it yourself-->
 				<section class="bio_text">
