--- a/index.html
+++ b/index.html
@@ -194,20 +194,29 @@
 				</section>
 
 				<!---Mobile Homepage-->
-				<img class="study_img_container" id="study_img" src="images/mobile_hifi.png">
+				<img class="study_img_container" id="study_img" src="images/mobile.png">
 
 				<!--Try it yourself-->
 				<section class="bio_text">
 					<a name="try_it">
 
+							
 						<h2>Try It Yourself</h2>
-						<p> <a href="https://projects.invisionapp.com/share/SHU4EZ2WA4D#/screens" target="blank"> Desktop Prototype
-							</a> <br> <br>
+
+						<section class="bio_text">
+	
+								<p>If you want to try the prototypes, click the links below to try them out on Invision. <br> <br></p>
+		
+						
+						<p  id="centerMe"> <a href="https://projects.invisionapp.com/share/SHU4EZ2WA4D#/screens" target="blank"> Desktop Prototype | 
+							</a>
 							<a
 								href="https://projects.invisionapp.com/share/3GU4I5IH8D7#/screens/386041006_Android_Mobile_Version" target="blank">
 								Mobile Prototype </a>
 						</p>
 					</a>
+				</section>
+
 				</section>
 
 
