--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
 							it have this big fat side navigation? Why not have it on the top like most other websites?
 							The way images are stitched together here doesn't really look nice on desktop, and there are
 							three big competing headlines screaming right at you from the start. None of which really
-							inform
-							you what the WCS is about other then the fact that they have something to do with animals.
+							inform you what the WCS is about other than the fact that they have something to do with animals.
 						</p>
 
 					</a>
@@ -163,12 +162,11 @@
 						<h2>Low Fidelity Mockups</h2>
 						<p> We decided that the goal of our prototype should be to entice people to contribute in any
 							way they can. Not only with donations, but also through inexspensive means such as
-							volunteering
-							and signing petitions. Primarily, we wanted to make this quick, easy, and in a way that
+							volunteering and signing petitions. We wanted to make this quick, easy, and ensure that it
 							doesn't take you away from browsing the rest of the website. <br> <br>
 
 							The user flow pictured below demonstrates our intended interaction with the website.
-							Ideally, at any point during someones visit they should be able to do something productive.
+							Ideally, at any point during someones visit they should be able to do something to help the WCS.
 						</p>
 					</a>
 				</section>
@@ -224,12 +222,24 @@
 
 				<section class="bio_text">
 
-					<p> <br> And here is an image of it on mobile: </p>
+					<p> <br> <br> And here is an image of it on mobile: </p>
 
 				</section>
 
 				<!---Mobile Homepage-->
 				<img class="study_img_container" id="study_img" src="images/mobile.png">
+
+				<section class="bio_text">
+
+						<p> So as you can see, we changed the website quite a bit in our design.
+							 We didn't really change the branding very much, but we changed the arrangement of the various elements on the page quite a bit. 
+							 The images are arranged much better and each of them has a clear call to action. In particuler, the hero image and text at the start of the page clearly and concisely
+							 tell you what the WCS stands for and prompts you to contribute imediately. On the desktop version of the prototype, each of these CTAs have their own page. I highly recommend
+							 that you try both of the prototypes for yourself. There's a lot more to them than the images I just showed you. There may yet still be room to improve this, but if this redesign was really
+							 going to be used, I think the changes we made would improve the site significantly.  
+							 </p>
+	
+					</section>
 
 				<!--Try it yourself-->
 				<section class="bio_text">
