--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
 							it have this big fat side navigation? Why not have it on the top like most other websites?
 							The way images are stitched together here doesn't really look nice on desktop, and there are
 							three big competing headlines screaming right at you from the start. None of which really
-							inform you what the WCS is about other than the fact that they have something to do with animals.
+							inform you what the WCS is about other than the fact that they have something to do with
+							animals.
 						</p>
 
 					</a>
@@ -166,7 +167,8 @@
 							doesn't take you away from browsing the rest of the website. <br> <br>
 
 							The user flow pictured below demonstrates our intended interaction with the website.
-							Ideally, at any point during someones visit they should be able to do something to help the WCS.
+							Ideally, at any point during someones visit they should be able to do something to help the
+							WCS.
 						</p>
 					</a>
 				</section>
@@ -231,39 +233,43 @@
 
 				<section class="bio_text">
 
-						<p> So as you can see, we changed the website quite a bit in our design.
-							 We didn't really change the branding very much, but we changed the arrangement of the various elements on the page quite a bit. 
-							 The images are arranged much better and each of them has a clear call to action. In particuler, the hero image and text at the start of the page clearly and concisely
-							 tell you what the WCS stands for and prompts you to contribute imediately. On the desktop version of the prototype, each of these CTAs have their own page. I highly recommend
-							 that you try both of the prototypes for yourself. There's a lot more to them than the images I just showed you. There may yet still be room to improve this, but if this redesign was really
-							 going to be used, I think the changes we made would improve the site significantly.  
-							 </p>
-	
-					</section>
+					<p> So as you can see, we changed the website quite a bit in our design.
+						We didn't really change the branding very much, but we changed the arrangement of the various
+						elements on the page quite a bit.
+						The images are arranged much better and each of them has a clear call to action. In particuler,
+						the hero image and text at the start of the page clearly and concisely
+						tell you what the WCS stands for and prompts you to contribute imediately. On the desktop
+						version of the prototype, each of these CTAs have their own page. I highly recommend
+						that you try both of the prototypes for yourself. There's a lot more to them than the images I
+						just showed you. There may yet still be room to improve this, but if this redesign was really
+						going to be used, I think the changes we made would improve the site significantly.
+					</p>
+
+				</section>
 
 				<!--Try it yourself-->
-				<section class="bio_text">
+				<section class="bio_text" id="centerMe">
 					<a name="try_it">
 
 
 						<h2>Try It Yourself</h2>
 
-						<section class="bio_text">
 
-							<p>If you want to try the prototypes, click the links below to try them out on Invision.
-								<br> <br></p>
+						<p>If you want to try the prototypes, click the links below to try them out on Invision.
+							<br> <br></p>
 
 
-							<p id="centerMe"> <a href="https://projects.invisionapp.com/share/SHU4EZ2WA4D#/screens"
-									target="blank"> Desktop Prototype |
-								</a>
-								<a href="https://projects.invisionapp.com/share/3GU4I5IH8D7#/screens/386041006_Android_Mobile_Version"
-									target="blank">
-									Mobile Prototype </a>
-							</p>
+						<p > <a class="blockMe"
+								href="https://projects.invisionapp.com/share/SHU4EZ2WA4D#/screens" target="blank">|
+								Desktop Prototype |
+							</a>
+							<a class="blockMe"
+								href="https://projects.invisionapp.com/share/3GU4I5IH8D7#/screens/386041006_Android_Mobile_Version"
+								target="blank">
+								| Mobile Prototype |</a>
+						</p>
+
 					</a>
-				</section>
-
 				</section>
 
 
@@ -284,7 +290,7 @@
 
 
 					<section class="footer_items">
-						
+
 						<p>
 							Email: rami.gshreim@gmail.com | Phone: (949)-732-8483 |
 						</p>
@@ -295,7 +301,7 @@
 							<a href="https://www.artstation.com/greenrami"><img src="images/Artstation.png"
 									class="social_icon"></a>
 						</section>
-					
+
 					</section>
 
 				</section>
